# pyEmerald

./: .gitignore  CMakeLists.txt  README.md  _pyemerald.c  _pyemerald.h  config.h.in  emerald.py  pyemerald.c  wnck.h  wraputils.c  wraputils.h
cython/: _c_decoration.pxd  _c_emerald.pxd  _c_gtypes.pxd  _c_py3cairo.pxd  _c_titlebar.pxd  _c_window.pxd  _c_wraputils.pxd  _pyemerald.c  _pyemerald.h  _pyemerald.pyx  stubs.pxd  wnck.h
examples/line/: engine.py
